--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,13 @@ logs/
 
 # Folder that has CTRE Phoenix Sim device config storage
 ctre_sim/
+
+# <--- CUSTOM IGNORES --->
+
+# sim gui related files
+simgui.json
+simgui-ds.json
+networktables.json
+
+# simulation data log directory
+logs/
